Fix image overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -308,7 +308,9 @@ nav a span {
   padding: 0;
   text-align: center;
   font-family: "Righteous";
-  font-size: 10rem;
+  /* font-size: 10rem; */
+  font-size: 6rem;
+
   color: cornflowerblue;
 }
 
@@ -317,16 +319,17 @@ nav a span {
   padding: 0;
   text-align: center;
   font-family: "Righteous";
-  font-size: 5rem;
+  /* font-size: 5rem; */
+  font-size: 3rem;
   color: black;
 }
 
 .error-img {
-  margin: 3rem 6rem;
+  margin: 3rem 3rem 0 3rem;
   padding: 0;
   width: 70%;
   height: auto;
-  max-width: 600px;
+  max-width: 500px;
 }
 
 .page-title {
@@ -376,6 +379,13 @@ nav a span {
 
   .error-img {
     margin: 3rem calc(50% - 300px);
+    margin-bottom: 0;
+  }
+  .error-status {
+    font-size: 7rem;
+  }
+  .error-message {
+    font-size: 4rem;
   }
 }
 
@@ -398,5 +408,11 @@ nav a span {
 
   .inner-wrapper {
     max-width: 1200px;
+  }
+  .error-status {
+    font-size: 10rem;
+  }
+  .error-message {
+    font-size: 5rem;
   }
 }
